wrap image align fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -327,7 +327,7 @@ a {
     object-fit: cover;
     height: 300px;
     transform: rotate(35deg);
-    margin-right: 410px;
+    margin-right: 137px;
   }
   .mobileTextMove{
     display: none;
